--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,9 @@
 [submodule "project/third_party/glm"]
 	path = project/third_party/glm
 	url = https://github.com/g-truc/glm.git
+[submodule "project/third_party/tinyobjloader"]
+	path = project/third_party/tinyobjloader
+	url = https://github.com/tinyobjloader/tinyobjloader.git
+[submodule "project/third_party/entt"]
+	path = project/third_party/entt
+	url = https://github.com/skypjack/entt.git
