--- a/project/CMakeLists.txt
+++ b/project/CMakeLists.txt
@@ -1,4 +1,9 @@
 cmake_minimum_required(VERSION 3.15)
+
+set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD_REQUIRED YES)
+set(CMAKE_CXX_EXTENSIONS NO)
+
 project(underwater_world)
 file(GLOB SRC
         "src/*.h"
@@ -19,22 +24,15 @@ include_directories(third_party/glad/include)
 
 add_subdirectory(third_party/glm)
 
-set(BUILD_SHARED_LIBS OFF)
-set(ASSIMP_BUILD_ASSIMP_TOOLS OFF)
-set(ASSIMP_BUILD_TESTS OFF)
-set(ASSIMP_BUILD_STATIC_LIB ON)
-set(ASSIMP_INSTALL OFF)
-add_subdirectory(third_party/assimp)
-include_directories(third_party/assimp/include)
+add_subdirectory(third_party/tinyobjloader)
+
+include_directories(third_party/entt/src)
+
+include_directories(third_party/stb)
 
 add_executable(${CMAKE_PROJECT_NAME} ${SRC})
 
-set_target_properties(${CMAKE_PROJECT_NAME} 
-        PROPERTIES
-                CMAKE_CXX_STANDARD 17
-                CMAKE_CXX_STANDARD_REQUIRED YES
-                CMAKE_CXX_EXTENSIONS NO
-)
 
 
-target_link_libraries(${CMAKE_PROJECT_NAME} glfw glad glm assimp)
+
+target_link_libraries(${CMAKE_PROJECT_NAME} glfw glad glm tinyobjloader)
